--- a/admitad_test/requirements.txt
+++ b/admitad_test/requirements.txt
@@ -1,19 +1,24 @@
+amqp==2.5.0
+billiard==3.6.0.0
 cairocffi==1.0.2
 CairoSVG==2.4.0
+celery==4.3.0
 cffi==1.12.3
 cssselect2==0.2.1
 defusedxml==0.6.0
 Django==2.2.3
+django-override-settings==1.2
 djangorestframework==3.10.1
 html5lib==1.0.1
+kombu==4.6.3
 Pillow==6.1.0
 pycparser==2.19
 Pyphen==0.9.5
 pytz==2019.1
+redis==3.2.1
 six==1.12.0
 sqlparse==0.3.0
 tinycss2==1.0.2
+vine==1.3.0
 WeasyPrint==48
 webencodings==0.5.1
-celery
-redis
